# machine-learning-playground

./: pyproject.toml
src/machine_learning_playground/: data_science_models.ipynb  lung_cancer_prediction.ipynb  statistical_tests.ipynb
